# MOVA

./: .gitignore  README.md
evaluation/: .gitignore  README.md  verse_bench_prompts.json
evaluation/envs/: requirements_audio.txt  requirements_av.txt  requirements_cpcer.txt  requirements_dnsmos.txt  requirements_visual.txt
evaluation/metrics/audio_amplitude/: eval_audio_amplitude.py
evaluation/metrics/audio_is_clap/: IS.py  data_fix.py  eval_audio_is_clap.py
evaluation/metrics/audio_is_clap/clap_ckpt/: README.md
evaluation/metrics/av_quality/: av_align_score.py  eval_av_quality.py  extract_video.py
evaluation/metrics/av_quality/av_bench/: extraction_models.py  pyproject.toml
evaluation/metrics/av_quality/weights/: README.md
evaluation/metrics/cpcer/: eval_cpcer.py  references.txt  speaker_metrics.py  speaker_timestamp_utils.py
evaluation/metrics/dnsmos/: eval_dnsmos.py
evaluation/metrics/video_reward/: data.py  eval_video_reward.py  train_reward.py  utils.py  vision_process.py
evaluation/models/clap/: pyproject.toml
evaluation/models/dover/: dover_plus.yml  setup.py  zero_shot_res_sensehdr.txt
evaluation/models/dover/pretrained_weights/: README.md
evaluation/models/imagebind/: pyproject.toml
evaluation/models/imagebind/imagebind/models/: imagebind_model.py
evaluation/scripts/: convert_prompts.py  download_weights.sh  run_eval.sh  set_env.sh  setup_envs.sh
workflow/: README.md  api_utils.py  app.py  config.py  generate_first_frame.py  prompt_rewriter_with_image.py
workflow/tests/: test_minimax_integration.py  test_minimax_provider.py
(+23 files in other folders)
